# tool-shack

./: LICENSE  README.md  setup.cfg
src/tool_shack/: core.py  data.py  debug.py  fs.py  scripting.py  storage.py
tests/: basic.py  benchmark.py  color.py
