[metadata]
name = tool-shack
version = 0.0.1
author = shiyao
author_email = sos1sos2harry@163.com
description = "miscellaneous helper constructs used across my projects"
long_description = file:README.md
long_description_content_type = text/markdown
url = ""
classifiers = 
    Programming Langauge :: Python :: 3

[options]
package_dir = 
    = src 
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src